--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,17 +1,21 @@
 @import '@fontsource/fira-mono';
 
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;700&display=swap');
+
+
 :root {
-	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	--font-body: 'Rubik', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 	--color-bg-0: rgb(202, 216, 228);
 	--color-bg-1: hsl(209, 36%, 86%);
 	--color-bg-2: hsl(224, 44%, 95%);
-	--color-theme-1: #ff3e00;
-	--color-theme-2: #40b3ff;
-	--color-text: rgba(0, 0, 0, 0.7);
+	--color-theme-1: #FA006E;
+	--color-theme-2: #BE2C60;
+	--color-text: black;
 	--column-width: 42rem;
-	--column-margin-top: 4rem;
+	--column-margin-top: 4rem;	
+	--border-radius: 16px;
 	font-family: var(--font-body);
 	color: var(--color-text);
 }
@@ -19,15 +23,6 @@
 body {
 	min-height: 100vh;
 	margin: 0;
-	background-attachment: fixed;
-	background-color: var(--color-bg-1);
-	background-size: 100vw 100vh;
-	background-image: radial-gradient(
-			50% 50% at 50% 50%,
-			rgba(255, 255, 255, 0.75) 0%,
-			rgba(255, 255, 255, 0) 100%
-		),
-		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
 }
 
 h1,
@@ -92,4 +87,20 @@ button:focus:not(:focus-visible) {
 	h1 {
 		font-size: 2.4rem;
 	}
+}
+
+.cto {
+	background: var(--color-theme-1);
+	color: white;
+	border: none;
+	border-radius: var(--border-radius);
+	padding: 0 1em;
+	cursor: pointer;
+	transition-duration: 0.3s;	
+	font-weight: 600;
+	height: 3em;
+}
+
+.cto:hover {
+	background: var(--color-theme-2);
 }
