--- a/src/routes/(app)/styles.css
+++ b/src/routes/(app)/styles.css
@@ -1,8 +1,9 @@
 @import '@fontsource/fira-mono';
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 
-
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;700&display=swap');
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
 	--font-body: 'Rubik', sans-serif;
@@ -10,115 +11,14 @@
 	--color-bg-0: rgb(202, 216, 228);
 	--color-bg-1: hsl(209, 36%, 86%);
 	--color-bg-2: hsl(224, 44%, 95%);
-	--color-theme-1: #FA006E;
-	--color-theme-1--hover: #BE2C60;
-	--color-theme-2: #FDE5ED;
-	--color-theme-2--hover: #E9CFD9;
+	--color-theme-1: #fa006e;
+	--color-theme-1--hover: #be2c60;
+	--color-theme-2: #fde5ed;
+	--color-theme-2--hover: #e9cfd9;
 	--color-text: black;
 	--column-width: 42rem;
-	--column-margin-top: 4rem;	
+	--column-margin-top: 4rem;
 	--border-radius: 16px;
 	font-family: var(--font-body);
 	color: var(--color-text);
-}
-
-body {
-	min-height: 100vh;
-	margin: 0;
-}
-
-h1,
-h2,
-p {
-	font-weight: 400;
-}
-
-p {
-	line-height: 1.5;
-}
-
-a {
-	color: var(--color-theme-1);
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-h1 {
-	font-size: 2rem;
-	text-align: center;
-}
-
-h2 {
-	font-size: 1rem;
-}
-
-pre {
-	font-size: 16px;
-	font-family: var(--font-mono);
-	background-color: rgba(255, 255, 255, 0.45);
-	border-radius: 3px;
-	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
-	padding: 0.5em;
-	overflow-x: auto;
-	color: var(--color-text);
-}
-
-.text-column {
-	display: flex;
-	max-width: 48rem;
-	flex: 0.6;
-	flex-direction: column;
-	justify-content: center;
-	margin: 0 auto;
-}
-
-input,
-button {
-	font-size: inherit;
-	font-family: inherit;
-}
-
-button:focus:not(:focus-visible) {
-	outline: none;
-}
-
-@media (min-width: 720px) {
-	h1 {
-		font-size: 2.4rem;
-	}
-}
-
-.cto {
-	background: var(--color-theme-1);
-	color: white;
-	border: none;
-	border-radius: var(--border-radius);
-	padding: 0 1em;
-	cursor: pointer;
-	transition-duration: 0.3s;	
-	font-weight: 600;
-	height: 3em;
-}
-
-.cto:hover {
-	background: var(--color-theme-1--hover);
-}
-
-.button {
-	background: var(--color-theme-2);
-	color: black;
-	border: none;
-	border-radius: var(--border-radius);
-	padding: 0 1em;
-	cursor: pointer;
-	transition-duration: 0.3s;	
-	font-weight: 600;
-	height: 3em;
-}
-
-.button:hover {
-	background: var(--color-theme-2--hover);
 }
